git commit -m 'próximos passos'

--- a/Notebooks/analise_exploratoria.ipynb
+++ b/Notebooks/analise_exploratoria.ipynb
@@ -1091,6 +1091,45 @@
    "source": [
     "Muitos outliers para a maioria das features, o que indica que existem preços de venda que distoam, quantidade de pedidos de diferentes tamanhos e mix de produtos grandes"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['SalesKey', 'SaleYear', 'SaleMonth', 'SaleDay', 'SaleDate',\n",
+       "       'ChannelName', 'SalesTerritoryCountry', 'SalesTerritoryRegion',\n",
+       "       'SalesTerritoryName', 'CityName', 'StoreType', 'StoreName',\n",
+       "       'ProductCategoryName', 'ProductSubcategoryName', 'ClassName',\n",
+       "       'BrandName', 'ProductName', 'TotalCost', 'SalesQuantity', 'SalesAmount',\n",
+       "       'DiscountQuantity', 'DiscountAmount', 'ReturnQuantity', 'ReturnAmount'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dados.columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Próximos passos, aparentemente a venda caiu porque vendeu produtos de valor menor, portanto analisar:\n",
+    "- quantidade de lojas por ano\n",
+    "- evolução ticket médio por cupon\n",
+    "- evolução quantidade media de produtos por cupon\n",
+    "- evolução de quantidade de produtos vendidos por categoria\n",
+    "- evolução aumento do custo vs aumento do preço de venda\n",
+    "- evolução margem\n"
+   ]
   }
  ],
  "metadata": {
